Fix: I unintentionaly amended the styling for the <p> element in the how to play section when that styling should have only been targeting the score <p>, have now amended the score to be wrapped in <h3> and amended the target in the css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@ h1 {
 
 /* Body content */
 
-#game-and-feat p {
+#game-and-feat h3 {
     text-align: center;
     padding-bottom: 10px;
     font-size: 1.5em;
@@ -97,7 +97,7 @@ h1 {
     width: 60%;
     min-width: 200px;
     border-radius: 8px;
-    font-family: 'Encode Sans SC', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 1rem;
     display: none;
 }
